--- a/asset/i18n/zh-chs.json
+++ b/asset/i18n/zh-chs.json
@@ -7,7 +7,7 @@
   "nav-contact" : "留言",
   "contact-head":"留言",
   "intro-p1":"我是美国<a href=\"http://www.tamu.edu\">得克萨斯A&M大学</a>的一年级博士生，",
-  "intro-p2":"目前在<a href=\"https://parasol.tamu.edu/\"> Parasol Lab</a>下的<a href=\"https://parasol.tamu.edu/groups/huangroup\"> ASER Group</a> 研究小组中工作，导师是<a href=\"https://parasol.tamu.edu/people/jeff/\"> Dr. Jeff Huang </a>，",
+  "intro-p2":"目前在<a href=\"https://parasol.tamu.edu/\"> Parasol Lab</a>下的<a href=\"https://parasol.tamu.edu/groups/huangroup\">ASER Group</a>研究小组中工作，导师是<a href=\"https://parasol.tamu.edu/people/jeff/\">Dr.Jeff Huang</a>",
   "intro-p3":"我的主要研究方向包括程序分析和软件工程。",
   "intro-addr":"电话: (979)???<br>邮箱: ???@tamu.edu<br>办公室: 427A HRBB<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;College Station, TX 77843-3112, USA",
   "gwf-error":"抱歉，您所在的地区无法使用该服务。",
@@ -16,5 +16,9 @@
   "contact-msg":"内容",
   "contact-submit":"发送",
   "footer-copyright":"版权所有 © 蔡博文 2015",
-  "modal-send": "发送成功，我会尽快回信"
+  "contactMsg-200-title": "发送成功！",
+  "contactMsg-200-msg":"谢谢您的消息，我会尽快回信",
+  "contactMsg-error-title":"欸，这条消息发送失败了。。。",
+  "contactMsg-error-msg":"请通过邮箱联系我 <a href=\"mailto:feedback2bowen@outlook.com\">feedback2bowen@outlook.com</a>",
+  "net-error-msg":"网络故障，无法连接到后台服务器。"
 }
